fix: wrong position of scrollTop when using anchor scrolling (fix #73)

--- a/src/styles/layout/_footer.scss
+++ b/src/styles/layout/_footer.scss
@@ -5,7 +5,7 @@
   background-color: #f9f9f9;
   border-top: 1px solid #e5e5e5;
   font-size: 0;
-  z-index: 2;
+  z-index: 10;
 
   .info {
     font-size: 13px;
