--- a/src/styles/layout/_lnb.scss
+++ b/src/styles/layout/_lnb.scss
@@ -9,6 +9,7 @@
   border-right: 1px solid #ccc;
   overflow-x: hidden;
   overflow-y: auto;
+  z-index: 9;
 
   .btn-search {
     position: absolute;
