--- a/src/styles/pages/_api.scss
+++ b/src/styles/pages/_api.scss
@@ -18,11 +18,21 @@
   padding: 40px 0;
 
   .definition-list {
-    padding: 40px 0;
-    border-top: 1px solid #eee;
+    margin-top: -40px;
+    padding: 0 0 40px 0;
+    border-bottom: 1px solid #eee;
 
-    &.first-child {
-      border-top: none;
+    &:last-child {
+      border-bottom: none;
+    }
+
+    &:before {
+      display: block;
+      content: " ";
+      margin-top: 0px;
+      height: 70px;
+      visibility: hidden;
+      pointer-events: none;
     }
   }
 
